syntax = "proto3";

package api.point.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

option go_package = "sd-point/api/point/v1;v1";


service Point {
	// 创建点数
	rpc CreatePoints (CreatePointsRequest) returns (google.protobuf.Empty){
		option (google.api.http) = {
			put: "/v1/point",
			body:"*",
		};
	};
	// 更新点数
	rpc UpdatePoint (UpdatePointRequest) returns (google.protobuf.Empty){
		option (google.api.http) = {
			post: "/v1/point",
			body: "*",
		};
	};
	// 删除点数
	rpc DeletePoint (DeletePointRequest) returns (google.protobuf.Empty){
		option (google.api.http) = {
			delete: "/v1/point",
		};
	};
	// 获取点数
	rpc GetPoint (GetPointRequest) returns (GetPointReply){
		option (google.api.http) = {
			get: "/v1/point",
		};
	};
	// 获取点数列表
	rpc ListPoint (ListPointRequest) returns (ListPointReply){
		option (google.api.http) = {
			get: "/v1/point/list",
		};
	};
}

message PointInfo {
	// 点数编号
	int32 pid = 1;
	// 点数数量
	int32 num = 2 [(validate.rules).int32 = {gte: -65536, lte: 65535}];
	// 新增点数的描述
	string desc = 4 [(validate.rules).string = {max_len: 1024}];
	// 点数新增时间
	int64 clicked_at = 3;

	// 创建时间
	int64 created_at = 5;
	// 更新时间
	int64 updated_at = 6;
	// 删除时间
	int64 deleted_at = 7;
}

message CreatePointsRequest {
	// 幂等令牌
	string token = 1;
	// 新增点数信息
	repeated PointInfo point = 2 [(validate.rules).repeated = {min_items: 1}];
}

message UpdatePointRequest {
	// 幂等令牌
	string token = 1;
	// 待更新点数信息
	PointInfo point = 2 [(validate.rules).message.required = true];
}
message UpdatePointReply {}

message DeletePointRequest {
	// 幂等令牌
	string token = 1;
	// 待删除的点数编号
	int32 pid = 2;
}
message DeletePointReply {}

message GetPointRequest {
	// 幂等令牌
	string token = 1;
	// 点数编号
	int32 pid = 2;
}
message GetPointReply {
	PointInfo point = 1;
}

message ListPointRequest {}
message ListPointReply {
	repeated PointInfo point = 1;
}